* Full code refactoring for es6 using async/await and also following standard coding style. Standard is used by a lot of awesome node.js engineers from nearform, yld.io, risingstack, zeit and so on
* Passing node --flags for less GC pauses and for machines with 500MB memory size

* Rename application.js to follow the node.js convention to index.js

* update aws-sdk version from 2.3.1 to 2.3.17

* update lodash version from 4.8.2 to 4.13.1

* reduce docker image from 715.1 MB to 116.8 MB using mhart/alpine-node:6

* Install nock for testing external api calls

* Install and setup ava for tests, so we have full es6 features and concurrency is first class citizen for tests

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ lib-cov
 
 # Coverage directory used by tools like istanbul
 coverage
+build
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
@@ -25,6 +26,8 @@ build/Release
 
 # Dependency directory
 node_modules
+
+.nyc_output
 
 # Optional npm cache directory
 .npm
