--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Register EC2 instances with an ELB",
   "main": "application.js",
   "scripts": {
-    "test": "mocha"
+    "test": "npm run lint && NODE_ENV=test nyc --reporter=lcov ava && nyc report",
+    "lint": "standard --verbose | snazzy"
   },
   "repository": {
     "type": "git",
@@ -22,10 +23,43 @@
     "url": "https://github.com/containership/elb-registrator/issues"
   },
   "homepage": "https://github.com/containership/elb-registrator",
+  "ava": {
+    "babel": {
+      "presets": [
+        "es2015"
+      ],
+      "plugins": [
+        "syntax-async-functions",
+        "transform-async-to-generator"
+      ]
+    },
+    "files": [
+      "test/**/*spec.js"
+    ],
+    "failFast": true,
+    "require": [
+      "babel-register",
+      "./test"
+    ]
+  },
+  "standard": {
+    "parser": "babel-eslint"
+  },
   "dependencies": {
-    "async": "^2.0.0-rc.2",
     "aws-sdk": "^2.3.1",
-    "lodash": "^4.8.2",
-    "mocha": "^2.4.5"
+    "lodash": "^4.8.2"
+  },
+  "devDependencies": {
+    "ava": "^0.14.0",
+    "babel-eslint": "^6.0.4",
+    "babel-plugin-syntax-async-functions": "^6.8.0",
+    "babel-plugin-transform-async-to-generator": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.8.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-register": "^6.8.0",
+    "nock": "^8.0.0",
+    "nyc": "^6.4.4",
+    "snazzy": "^4.0.0",
+    "standard": "^7.0.1"
   }
 }
