--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "elb-registrator",
   "version": "0.1.1",
   "description": "Register EC2 instances with an ELB",
-  "main": "application.js",
+  "main": "build/index.js",
   "scripts": {
+    "start": "npm run build && npm run serve",
+    "serve": "node --optimize_for_size --max_old_space_size=460 --gc_interval=100 build/index.js",
+    "build": "npm run clean && babel --presets es2015-node6,stage-2 --plugins transform-runtime --ignore node_modules,test,coverage . -d build",
+    "clean": "rm -rf build && mkdir build",
     "test": "npm run lint && NODE_ENV=test nyc --reporter=lcov ava && nyc report",
     "lint": "standard --verbose | snazzy"
   },
@@ -24,15 +28,6 @@
   },
   "homepage": "https://github.com/containership/elb-registrator",
   "ava": {
-    "babel": {
-      "presets": [
-        "es2015"
-      ],
-      "plugins": [
-        "syntax-async-functions",
-        "transform-async-to-generator"
-      ]
-    },
     "files": [
       "test/**/*spec.js"
     ],
@@ -46,20 +41,19 @@
     "parser": "babel-eslint"
   },
   "dependencies": {
-    "aws-sdk": "^2.3.1",
-    "lodash": "^4.8.2"
+    "aws-sdk": "^2.3.17",
+    "lodash": "^4.13.1"
   },
   "devDependencies": {
-    "ava": "^0.14.0",
+    "ava": "^0.15.2",
+    "babel-cli": "^6.9.0",
     "babel-eslint": "^6.0.4",
-    "babel-plugin-syntax-async-functions": "^6.8.0",
-    "babel-plugin-transform-async-to-generator": "^6.8.0",
-    "babel-plugin-transform-runtime": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015-node6": "^0.2.0",
+    "babel-preset-stage-2": "^6.5.0",
     "babel-register": "^6.8.0",
     "nock": "^8.0.0",
     "nyc": "^6.4.4",
     "snazzy": "^4.0.0",
-    "standard": "^7.0.1"
+    "standard": "^7.1.2"
   }
 }
